--- a/portfolioapp/templates/portfolioapp/home.html
+++ b/portfolioapp/templates/portfolioapp/home.html
@@ -3,50 +3,79 @@
 
 {% block body %}
     <section id="home-sec">
-        <div id="navbar">
-            <div id="iname">
-                <span class="animate-show">Benedict</span>
-                <span class="animate-show">Onyebuchi</span>
-            </div>
-            <div id="menu-buttons-nav">
-                <div>
-                    <span>Home</span>
-                    <i class="fa-solid fa-house-user fa-1xl"></i>
-                </div>
-                <div>
-                    <span>Projects</span>
-                    <i class="fa-solid fa-code fa-1xl"></i>
-                </div>
-                <div>
-                    <span>Blogs</span>
-                    <i class="fa-solid fa-blog fa-1xl"></i>
-                </div>
-            </div>
-        </div>
         
-        <h1 class="animate-show" style="padding:0 0.5em;">Hi, I am Benedict Onyebuchi.I am a Software Engineer having 2+ years of experience.</h1>
+        <h1 class="animate-show" id="welcome-text">Hi, I am Benedict Onyebuchi.I am a Software Engineer having 2+ years of experience.</h1>
         
-        <div id="info">
+        <div class="info" style="" id="info-first">
             <div>
-                <div id="info-cards">
+                <div class="info-cards">
                     <div class="info-card">
-                        <i class="fa-solid fa-check fa-shake"></i>
-                        <span>I am passionate about developing efficient applications</span>
+                        <i class="fa-solid fa-check fa-shake animate-show"></i>
+                        <span class="animate-show">I am passionate about developing efficient applications</span>
                     </div>
                     <div class="info-card">
-                        <i class="fa-solid fa-check fa-shake"></i>
-                        <span>I believe that the best way to work effectively for a client is to communicate well.</span>
+                        <i class="fa-solid fa-check fa-shake animate-show"></i>
+                        <span class="animate-show">I believe that the best way to work effectively for a client is to communicate well.</span>
                     </div>
                     <div class="info-card">
-                        <i class="fa-solid fa-check fa-shake"></i>
-                        <span>I am available to collaborate on any project and I am always happy to anwser questions about my career</span>
+                        <i class="fa-solid fa-check fa-shake animate-show"></i>
+                        <span class="animate-show">I am available to collaborate on any project and I am always happy to anwser questions about my career</span>
                     </div>
                 </div>
             </div>
             <div id="chart-container">
-                <canvas id="my-github-chart" style="width:100%;max-width:700px;"></canvas>
+                <canvas id="my-github-chart" style="width:100%;max-width:700px;" class="chart"></canvas>
             </div>
         </div>
 
+        <h1 class="animate-show">Skills</h1>
+        <div class="info">
+            <div class="info-cards">
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Python Development</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Web backend and Api Development using Django,Flask and FastApi</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Using Code Management and Collaboration Technologies such as Git and Github</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Basic Knowledge of Docker and Good experience working with linux operating systems and cloud servers like linode</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Frontend Development using Html,Css and Javascript</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Web Scraping and Web Automation using Selenium,Requests and Beautifulsoup</span>
+                </div>
+
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Basic Flutter Development</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Image Processing and Computer Vision using OpenCV,numpy and mediapipe</span>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check animate-show"></i>
+                    <span class="animate-show">Development of Telegram Bots</span>
+                </div>
+            </div> 
+            <div id="chart-container2">
+                <canvas id="my-github-chart2" style="width:100%;max-width:700px;" class="chart"></canvas>
+            </div>
+        </div>
     </section>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{% static 'javascript/home.js' %}"></script>
 {% endblock %}
