--- a/static/main.css
+++ b/static/main.css
@@ -24,6 +24,18 @@ button i{
 
 }
 
+.toastify{
+    outline:none;
+    text-decoration: none;
+    font-size:1.1rem;
+    position:fixed;
+    margin-top:80px;
+}
+
+.toastify img{
+    border-radius:50%;
+}
+
 body{
     /* background-color: var(--color-dark-theme); */
     color: var(--color-light-theme);
