--- a/portfolioapp/templates/portfolioapp/home.html
+++ b/portfolioapp/templates/portfolioapp/home.html
@@ -4,20 +4,20 @@
 {% block body %}
     <section id="home-sec">
         
-        <h1 class="animate-show" id="welcome-text">Hi, I am Benedict Onyebuchi.I am a Software Engineer having 2+ years of experience.</h1>
+        <h1 class="animate-show slidein-element" id="welcome-text">Hi, I am Benedict Onyebuchi.I am a Software Engineer having 2+ years of experience.</h1>
         
         <div class="info" style="" id="info-first">
             <div>
                 <div class="info-cards">
-                    <div class="info-card">
+                    <div class="info-card slidein-element">
                         <i class="fa-solid fa-check fa-shake animate-show"></i>
                         <span class="animate-show">I am passionate about developing efficient applications</span>
                     </div>
-                    <div class="info-card">
+                    <div class="info-card slidein-element">
                         <i class="fa-solid fa-check fa-shake animate-show"></i>
                         <span class="animate-show">I believe that the best way to work effectively for a client is to communicate well.</span>
                     </div>
-                    <div class="info-card">
+                    <div class="info-card slidein-element">
                         <i class="fa-solid fa-check fa-shake animate-show"></i>
                         <span class="animate-show">I am available to collaborate on any project and I am always happy to anwser questions about my career</span>
                     </div>
@@ -31,35 +31,31 @@
         <h1 class="animate-show">Skills</h1>
         <div class="info">
             <div class="info-cards">
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Python Development</span>
                 </div>
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Web backend and Api Development using Django,Flask and FastApi</span>
                 </div>
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Using Code Management and Collaboration Technologies such as Git and Github</span>
                 </div>
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Basic Knowledge of Docker and Good experience working with linux operating systems and cloud servers like linode</span>
                 </div>
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Frontend Development using Html,Css and Javascript</span>
                 </div>
-                <div class="info-card">
+                <div class="info-card slidein-element">
                     <i class="fa-solid fa-check animate-show"></i>
                     <span class="animate-show">Web Scraping and Web Automation using Selenium,Requests and Beautifulsoup</span>
                 </div>
 
-                <div class="info-card">
-                    <i class="fa-solid fa-check animate-show"></i>
-                    <span class="animate-show">Basic Flutter Development</span>
-                </div>
                 
             </div> 
             <div id="chart-container2">
