--- a/portfolioapp/templates/portfolioapp/projects.html
+++ b/portfolioapp/templates/portfolioapp/projects.html
@@ -10,7 +10,7 @@
                     <div class="heading">
                         <span>{{repo.name}}</span>
                         <div style="display:flex;justify-content:space-around;padding:5px 0;">
-                            <a href="{{repo.github_url}}" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color:var(--color-light-theme)"></i></a>
+                            <a href="{{repo.github_url}}" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color:black;"></i></a>
                         </div>
                     </div>
                     
