--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,20 @@ html{
 
 button{
     position:relative;
+    background-color:#0582CA;
+    color:white;
+    border-radius:10px;
+    outline:none;
+    border:none;
+    width:150px;
+    height:40px;
+    transition:0.5s;
+}
+
+button:hover{
+    cursor:pointer;
+    background-color:#0582caab;
+    transform:translateY(10px);
 }
 
 button i{
@@ -36,11 +50,10 @@ button i{
 
 #welcome-text{
     background-color:var(--border-color);
-    /* border-radius:10px; */
-    border-radius: 0 10px 10px 0;
     padding:8px;
     display:flex;
-    /* transition:0.5s; */
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.313);
+    transition:0.5s;
     
 }
 
@@ -49,6 +62,10 @@ button i{
     animation-name: slidein;
     animation-duration: 2s;
     animation-fill-mode: forwards;
+}
+
+.heading{
+    text-align:center;
 }
 
 
@@ -121,14 +138,17 @@ section{
     padding:0;
     margin:0;
     margin-top:70px;
+    margin-bottom:30px;
     flex-direction: column;
     width:100%;
+    flex-direction:column;
+    gap:10px;
     overflow-x:hidden;
     overflow-y: hidden;
 }
 
 #home-sec{
-    
+    /* padding-left:10px; */
 }
 
 
@@ -212,8 +232,9 @@ section{
 .info{
     display: flex;
     flex-direction: row;
-    gap:10px;
-    
+    gap: 10px;
+    justify-content: space-evenly;
+    min-height:50px;
     
 }
 
@@ -231,9 +252,18 @@ section{
     flex-direction:row;
     align-items:center;
     max-width:600px;
-    gap:30px;
+    gap:10px;
     font-size:1.5rem;
+    padding:10px;
+}
+
+.toplevel i{
+    background-color:#caf0f8;
+    border-radius:50%;
     padding:5px;
+    width:30px;
+    height:30px;
+    text-align: center;
 }
 
 #chart-container,#chart-container2{
@@ -428,6 +458,42 @@ section{
     padding:3px;
 }
 
+#tech-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom:10px;
+}
+
+#technologies{
+    display:flex;
+    max-width:1000px;
+    flex-wrap:wrap;
+    gap:30px;
+    justify-content: center;
+    align-items:center;
+    align-self:center;
+}
+
+#technologies img{
+    width:100px;
+    height:100px;
+    filter:drop-shadow(1px 1px 2px black);
+    user-select: none;
+    -webkit-user-drag: none;
+    /* padding:5px; */
+}
+
+input{
+    outline:none;
+    border:1px solid #0582ca94;
+    min-width:200px;
+    padding:8px;
+    border-radius:10px;
+    font-family: monospace;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.412);
+}
+
 
 @media only screen and (max-width: 600px) {
     
@@ -452,26 +518,7 @@ section{
     .info{
         flex-direction:column;
     } 
-    /* #projects-container{
-        display:grid;
-        grid-template-columns:100%;
-        grid-row-gap: 10px;
-        width:95%;
-        align-self:center;
-        justify-items: center;
-    }
-
-    .project-card{
-        flex-direction: column;
-        align-self:center;
-    }
-
-    .project-card img{
-        width:100%;
-        border-radius:0;
-        border-top-left-radius:10px;
-        border-top-right-radius: 10px;
-    } */
+    
 
 }
 
